NetBSD Problem Report #45525

From www@NetBSD.org  Wed Oct 26 19:30:21 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 38C8F63D669
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 26 Oct 2011 19:30:21 +0000 (UTC)
Message-Id: <20111026193020.A643363D518@www.NetBSD.org>
Date: Wed, 26 Oct 2011 19:30:20 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Unused buffer in crl.c .
X-Send-Pr-Version: www-1.0

>Number:         45525
>Category:       port-vax
>Synopsis:       Unused buffer in crl.c .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-vax-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 26 19:35:00 +0000 2011
>Closed-Date:    Wed Oct 26 20:25:45 +0000 2011
>Last-Modified:  Wed Oct 26 20:25:45 +0000 2011
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Unused buffer ib crl.c .
>How-To-Repeat:

>Fix:
diff -u -p -r1.29 crl.c
--- sys/arch/vax/vax/crl.c	14 Dec 2010 23:44:49 -0000	1.29
+++ sys/arch/vax/vax/crl.c	26 Oct 2011 14:09:05 -0000
@@ -217,7 +217,7 @@ crlintr(void *arg)

 				snprintb(sbuf, sizeof(sbuf), CRLCS_BITS,
 				    crlstat.crl_cs);
-				snprintb(sbuf, sizeof(sbuf), CRLDS_BITS,
+				snprintb(sbuf2, sizeof(sbuf2), CRLDS_BITS,
 				    crlstat.crl_ds);
 				printf("crlcs=0x%s, crlds=0x%s\n", sbuf, sbuf2);
 				break;

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45525 CVS commit: src/sys/arch/vax/vax
Date: Wed, 26 Oct 2011 20:24:41 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Oct 26 20:24:41 UTC 2011

 Modified Files:
 	src/sys/arch/vax/vax: crl.c

 Log Message:
 Obvious copy&pasto, PR port-vax/45525 from Henning Petersen


 To generate a diff of this commit:
 cvs rdiff -u -r1.29 -r1.30 src/sys/arch/vax/vax/crl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 26 Oct 2011 20:25:45 +0000
State-Changed-Why:
Applied, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.