sys/arch/vax/vax/crl.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: crl.c,v 1.29 2010/12/14 23:44:49 matt Exp $	*/
+/*	$NetBSD: crl.c,v 1.30 2011/10/26 20:24:41 martin Exp $	*/
 /*-
  * Copyright (c) 1982, 1986 The Regents of the University of California.
  * All rights reserved.
@@ -40,7 +40,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: crl.c,v 1.29 2010/12/14 23:44:49 matt Exp $");
+__KERNEL_RCSID(0, "$NetBSD: crl.c,v 1.30 2011/10/26 20:24:41 martin Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -217,7 +217,7 @@ crlintr(void *arg)
 
 				snprintb(sbuf, sizeof(sbuf), CRLCS_BITS,
 				    crlstat.crl_cs);
-				snprintb(sbuf, sizeof(sbuf), CRLDS_BITS,
+				snprintb(sbuf2, sizeof(sbuf2), CRLDS_BITS,
 				    crlstat.crl_ds);
 				printf("crlcs=0x%s, crlds=0x%s\n", sbuf, sbuf2);
 				break;
